made a few changes

--- a/LPB/sass/var/all.scss
+++ b/LPB/sass/var/all.scss
@@ -14,11 +14,9 @@ $circle-border-radius:50%;
 $base-border-color: #ddd;
 $lightest-color:#fff;
 
-$button-toolbar-background-color: transparent;
-$button-toolbar-border-color: transparent;
+//$button-toolbar-background-color: transparent;
+//$button-toolbar-border-color: transparent;
 $button-toolbar-hover-background-color: #efefef;
-
-
 
 //Form and Toolbar Button UI colors
 
