--- a/LPB/sass/src/Application.scss
+++ b/LPB/sass/src/Application.scss
@@ -194,4 +194,6 @@
 // Styling for imageView dataview
 @import "./ImageViewer";
 @import "./UsersViewer";
+// styling for actioncolumn
+@import "./Action";
 
